# RSC25-Pose-GoG

./: .gitignore  README.md  ensemble.py  main.py  model.py  project_setup.py  pyproject.toml  test.py
config/nturgbd-cross-subject/: default.yaml
config/nturgbd-cross-view/: default.yaml
data/ntu/: get_raw_denoised_data.py  get_raw_skes_data.py  seq_transformation.py
data_feeders/: bone_pairs.py  data_utils.py  feeder_ntu.py
graph/: __init__.py  graph_utils.py  ntu_rgb_d.py  ucla.py
model/: baseline.py  gig.py  gig_self_gcn.py
torchlight/: gpu.py  utils.py
torchlight/torchlight.egg-info/: SOURCES.txt
viz/: viz_seq.py
work_dir/ntu_hdgcn/cross-subject/bone_CoM_1/: config.yaml  log.txt
work_dir/ntu_hdgcn/cross-subject/bone_CoM_1/runs/train/: events.out.tfevents.1754741217.LAPTOP-HO2T5QJ6
work_dir/ntu_hdgcn/cross-subject/bone_CoM_1/runs/val/: events.out.tfevents.1754741217.LAPTOP-HO2T5QJ6
work_dir/ntu_hdgcn/cross-subject/joint_CoM_1/: config.yaml
work_dir/ntu_hdgcn/cross-subject/joint_CoM_1/runs/train/: events.out.tfevents.1754741060.LAPTOP-HO2T5QJ6
work_dir/ntu_hdgcn/cross-subject/joint_CoM_1/runs/val/: events.out.tfevents.1754741060.LAPTOP-HO2T5QJ6
